fix #105 @media should be followed by whitespace

--- a/syntax_test_less.less
+++ b/syntax_test_less.less
@@ -31,6 +31,13 @@
 @background-color: hsl(30,100%,96%);
 /* <- variable.declaration.less punctuation.definition.variable.less */
 /* ^ variable.declaration.less */
+@medialist-bg: @body-bg;
+/* ^^^^^^^^^^ variable.declaration.less */
+/* <- variable.declaration.less punctuation.definition.variable.less */
+@media-list-bg: @body-bg;
+/* ^^^^^^^^^^ variable.declaration.less */
+/* <- variable.declaration.less punctuation.definition.variable.less */
+
 
 filter,
 /* ^ entity.name.tag.css */
